# assay-metadata

./: .gitignore  API_WELL_CODE_SOURCES.md  BACDIVE_ENZYME_EC_MAPPING_REPORT.md  CLAUDE.md  CLEANUP.sh  COMPLETE_SOLUTION.md  DEPRECATED_TERMS_REPORT.md  EC_LOOKUP_RESULTS.csv  EC_NUMBER_ASSIGNMENT_PLAN.md  ENZYME_PATHWAY_ID_ASSIGNMENT.md  FINAL_MAPPING_STATS.md  FINAL_SUMMARY.md  MAPPING_METHODOLOGY.md  Makefile  README.md  VALIDATION.md  WORKFLOW.md  api_kit_validation_report.json  check_enzyme_complete_coverage.py  check_enzyme_ec_coverage.py  data_validation_report.json  ec_mapping_report.md  ec_mappings_exact.tsv  enzyme_ec_exact_matcher.py  extract_enzyme_names.py  extract_metpo_predicates.py  map_bacdive_enzymes.py  metabolite_mappings_researched.py  metpo_relation_mapping_report.md  ontology_file_metadata.json  pyproject.toml  rebuild_ec_mappings.py  unique_enzyme_names.txt  unmapped_metabolites.txt  unmapped_metabolites_summary.md
data/: api_kits_list.json  assay_kits_simple.json  assay_metadata.json  bacdive_enzyme_ec_mappings.tsv  statistics.json
notes/: GO_KEGG_INTEGRATION.md  README.md  RESULTS.md  SIMPLIFIED_OUTPUT_SPEC.md  VALIDATION_ERRORS_DETAILED.md  VALIDATION_IMPLEMENTATION.md
references/: README.md
scripts/: README.md  apply_fixes.py
src/bacdive_assay_metadata/: __init__.py  main.py  mappers.py  metadata_builder.py  models.py  parser.py  validate_against_data.py  validate_api_kits.py  validate_fast.py  validate_mappings.py
