[project]
name = "bacdive-assay-metadata"
version = "0.1.0"
description = "Extract API assay metadata from BacDive JSON data with identifier mappings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.0",
    "bioregistry>=0.11.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
]

[project.scripts]
extract-metadata = "bacdive_assay_metadata.main:main"
validate-mappings = "bacdive_assay_metadata.validate_mappings:main"
validate-fast = "bacdive_assay_metadata.validate_fast:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ipython>=8.12.0",
]
